<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_name"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Iban"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iban"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Account : "
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/Customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/Quantity_Price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity_and_price"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="italic" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
</LinearLayout>