<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RCAccounts"
        android:layout_width="match_parent"
        android:layout_height="428dp"
        android:translationX="5dp"
        android:translationY="170dp" />

    <TextView
        android:id="@+id/Accounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_different_accounts"
        android:textSize="30sp"
        android:textStyle="bold"
        android:translationX="10dp"
        android:translationY="40dp" />

    <Button
        android:id="@+id/btn_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        android:translationX="290dp"
        android:translationY="700dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="153dp"
        android:layout_height="150dp"
        android:contentDescription="@string/meme"
        android:translationY="600dp"
        app:srcCompat="@drawable/meme" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="italic"
        android:translationX="350dp"
        android:translationY="150dp" />

    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:translationX="315dp"
        android:translationY="650dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>